<resources>
    <string name="app_name">PTinder</string>
    <string name="login_1">Заведи себе нового друга!</string>
    <string name="login_2">Чтобы начать, нажми кнопку ниже</string>
    <string name="notification_hint">Уведомления</string>
    <string name="menu_hint">Меню</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_pet_registration">PetRegistrationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_user_profile">Профиль</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_favourite">Избранные питомцы</string>
    <string name="menu_feed">Лента новостей</string>
    <string name="menu_settings">Настройки профиля</string>
    <string name="menu_pet_settings">Настройки профиля питомца</string>
    <string name="menu_help">Помощь</string>
    <string name="login_enter_info">Чтобы продолжить, введите следующую информацию</string>
    <string name="login_city_1">Ваш город *</string>
    <string name="login_city_2">Данная информацию нужна, чтобы находить людей в одном городе</string>
    <string name="login_city_3">Город</string>
    <string name="login_phone_1">Ваш номер телефона</string>
    <string name="login_phone_2">Данная информацию не является обязательной, позже ее можно изменить в личном кабинете</string>
    <string name="login_phone_3">Телефон</string>
    <string name="login_button_submit">Подтвердить</string>
    <string name="gender_male">Мужской</string>
    <string name="gender_female">Женский</string>
    <string name="login_gender_1">Ваш пол *</string>
    <string name="enter_pet_name">Введите кличку</string>
    <string name="enter_pet_age">Введите возраст</string>

    <string-array name="petGender">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

    <string-array name="petPurposes">
        <item>-</item>
        <item>Прогулка</item>
        <item>Вязка</item>
        <item>Переливание крови</item>
        <item>Дружба</item>
    </string-array>

    <string name="pet_info_text">Hula is a super smart amazing dog with so much love to give. Hula is well trained knows all commands sit, heal, go to your bed, stay on your bed, go to your crate, paw she knows it all. Hula is very protective and so loving g she needs a experienced owner who keeps her in check and loves her. She loves to play with toys she is a great fetcher and will be the most loyal dog you will ever know. We require that you meet with our trainer and that you take 15 training sessions with our trainer. You will love our trainer he has been training for 30 years. Give Hula a chance to be your forever best friend. She was abandoned and given up and hit in the face and she has come through it all.</string>
    <string name="pet_breed">Порода</string>
    <string name="pet_breed_husky">Наски</string>
    <string name="pet_age">Возраст</string>
    <string name="pet_age_1_year">1 год</string>
    <string name="pet_name">Pet name</string>
    <string name="pet_type">Тип</string>
    <string name="pet_type_dog">Собака</string>
    <string name="purpose">Цель</string>
    <string name="purpose_friendship">Дружба</string>
    <string name="help_text">
        Это приложение для владельцев домашних животных, позволяющее найти подходящих животных для вязки, прогулок и т.д. и связаться с их владельцами. Вы можете:\n
        ●	Привязать к своему профилю несколько питомцев\n
        ●	Искать среди всех анкет питомцев с различными фильтрами\n
        ●	Добавлять анкеты питомцев в раздел «избранное» (Вам будут приходить уведомления об изменениях в этих анкетах)\n
        ●	Просмотривать ленту со смешными картинками про животных\n
        ●	Подписываться на пользователей (Вам будут приходить уведомления об изменениях в анкетах этих пользователей или добавлении ими новых питомцев)\n
        \n
        Вы можете авторизоваться в приложении с помощью Google аккаунта и заполнить небольшую анкету о себе. Свои контактные данные можно скрыть и предоставлять доступ к ним только отдельным пользователям.\n
        Вы всегда можете изменить информацию о себе в настройках, куда можно попасть через меню навигации или из профиля пользователя.\n
        \n
        В профиле пользователя Вы можете добавить анкету питомца и указать в ней:\n
        ●	вид (из предложенных или добавить свой) – обязательно\n
        ●	породу\n
        ●	пол\n
        ●	возраст\n
        ●	кличку\n
        ●	цель размещения анкеты (вязка, прогулка, переливание крови)\n
        ●	до 10 фотографий (размером до 5 Мб, формата png или jpeg)\n
        ●	комментарий к анкете (до 500 символов)\n
        Информацию о питомцах всегда можно отредактировать в разделе настроек.\n
        \n
        Имеется возможность поиска анкет питомцев с фильтрами по виду, породе, полу, возрасту и цели размещения анкеты, город. Перейти к поиску можно из меню.\n
        \n
        Можно перейти с анкеты питомца в профиль его хозяина и получить контактную информацию для связи с ним. Если контактная информация скрыта, имеется возможность запросить к ней доступ посредством кнопки «Запросить контакты». Просматривать ответ пользователя или запросы на раскрытие собственной информации можно в разделе "Уведомления".\n
        \n
        О возникающих при работе ошибках можно сообщать в разделе "Issues" в репозиториях https://github.com/ShapovalovaIrina/PTinder-server или https://github.com/ShapovalovaIrina/PTinder-client\n
</string>
</resources>